# naturaDock

./: .gitignore  Dockerfile  LICENSE  README.md  config.toml  environment.yml  naturaDock_readme.md  pyproject.toml  requirements.txt  temp_script.py  temp_test_runner.py
.bmad-logs/: chat_history_20250916_100000.md  session_achievements_20250916_100000.md  session_achievements_20250916_113000.md
docs/: PRD.md  brief.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
notebooks/: demo.ipynb  example_workflow.ipynb  naturaDock_workflow.ipynb
qa/assessments/: pipeline.initial-build-trace-20250915.md
src/: docking.py
src/naturaDock/: benchmark.py  log_config.py  main.py
src/naturaDock/analysis/: export.py  results.py  statistics.py
src/naturaDock/docking/: parallel_dock.py  vina_dock.py
src/naturaDock/preprocessing/: compounds.py  protein.py
src/naturaDock/preprocessing/utils/: utils.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_compounds.py  test_docking.py  test_preprocessing.py
tests/benchmark/: test_benchmark.py
tests/data/: test_compounds_small.sdf
